# flog_otlp

./: .dockerignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.alt  Dockerfile.uv  Makefile  README.md  context.md  docker-compose.yml  example_scenario.yaml  example_scenario_strings.yaml  example_strings.yaml  main.py  pyproject.toml
scripts/: run.py
src/flog_otlp/: __init__.py  cli.py  logging_config.py  parser.py  scenario.py  sender.py
tests/: __init__.py  test_cli_strings.py  test_parser.py  test_scenario.py  test_sender.py  test_sumologic_sender.py
