[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flog-otlp"
version = "0.2.4"
description = "A Python utility that generates realistic log data using flog and sends it to OpenTelemetry Protocol (OTLP) endpoints or Sumo Logic HTTP sources"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Rick Jury", email = "rjury@sumologic.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["otlp", "opentelemetry", "logging", "flog", "observability", "testing", "sumologic", "http-source"]
dependencies = [
    "requests>=2.25.0",
    "PyYAML>=6.0.0",
    "lorem-text>=2.1.0",
]


[project.scripts]
flog-otlp = "flog_otlp.cli:main"

[project.urls]
Homepage = "https://github.com/rjury-sumo/flog_otlp/"
Repository = "https://github.com/rjury-sumo/flog_otlp.git"
Issues = "https://github.com/rjury-sumo/flog_otlp/issues"

[tool.hatch.version]
path = "src/flog_otlp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/flog_otlp"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "black>=24.0.0",
    "ruff>=0.10.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "twine>=6.1.0",
]
test = [
    "pytest>=8.4.1", 
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.0.0",
]
lint = [
    "black>=24.0.0",
    "ruff>=0.10.0", 
    "mypy>=1.0.0",
]
